@@ -37,7 +37,9 @@ abstract class AbstractColumn<T extends AbstractColumn<T>> extends Component
     protected final Grid<?> grid;
     private boolean headerRenderingScheduled;
     private boolean footerRenderingScheduled;
+
     private boolean sortingIndicators;
+
     private String headerText;
     private Component headerComponent;
     private String footerText;
@@ -337,7 +339,7 @@ abstract class AbstractColumn<T extends AbstractColumn<T>> extends Component
                 getChildren().filter(child -> child instanceof ColumnGroup)
                         .flatMap(child -> ((ColumnGroup) child)
                                 .getBottomChildColumns().stream())
-                        .toList());
+                        .collect(Collectors.toList()));
         return columnChildren;
     }
 }
